register requirements updates
